--- a/website_blog_tags_variable_dimension/views/templates.xml
+++ b/website_blog_tags_variable_dimension/views/templates.xml
@@ -3,11 +3,13 @@
         <template id="assets_common" name="website_blog_tags_variable_dimension assets" inherit_id="web.assets_common">
             <xpath expr="." position="inside">
                 <link rel="stylesheet" href="/website_blog_tags_variable_dimension/static/src/css/website_blog_tags_variable_dimension.css"/>
-            </xpath>  
+            </xpath>
         </template>
 
         <template id="opt_blog_rc_tags_var_dim_strucure" 
-            inherit_id="website_blog.index_right" customize_show="False" active="True">
+            inherit_id="website_blog.sidebar_blog_index" 
+            customize_show="False" 
+            active="True">
             <!-- note empty to keep cloud allways on top  -->
             <xpath expr="//div[@id='o_wblog_sidebar]" position="inside">
                 <div>
@@ -15,8 +17,11 @@
             </xpath>
         </template>
 
-        <template id="opt_blog_rc_tags_var_dim" name="Variable Dimension Tag Cloud"
-            inherit_id="website_blog.index_right" active="False" customize_show="True">
+        <template id="opt_blog_rc_tags_var_dim" 
+            name="Variable Dimension Tag Cloud"
+            inherit_id="website_blog.sidebar_blog_index" 
+            active="False" 
+            customize_show="True">
             <!-- note keep this tag cloud allways on top  -->
             <xpath expr="//div[@id='o_wblog_sidebar']/div[1]" position="before">
                 <div class="o_wblog_sidebar_block pb-5">
