--- a/website_blog_tags_variable_dimension/views/templates.xml
+++ b/website_blog_tags_variable_dimension/views/templates.xml
@@ -21,7 +21,7 @@
                     <ul class="nav nav-pills nav-stacked blog-tagcloud">
                         <t t-set="random_tags" t-value="other_tags"/>
                         <t t-foreach="random_tags" t-as="nav_tag">
-                            <li t-attf-style="font-size: {{nav_tag.font_size_in_cloud}}px; padding:3px">
+                            <li t-attf-style="font-size: {{nav_tag.font_size_in_cloud}}px; padding:0px 2px 1px 0px">
                                 <a t-attf-href="#{blog_url(tag=nav_tag)}">
                                     <span t-attf-style="color:{{nav_tag.random_color}};"><t t-esc="nav_tag.name"/> (<t t-esc="nav_tag.tag_cardinality"/>)</span>
                                 </a>
